feat: show original photo too
